--- a/people.html
+++ b/people.html
@@ -16,6 +16,7 @@
     else {alert("호텔의 밤");}  
     }
   </script>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
   <style>
       *{font-family:malgun gothic;
         line-height:160%;}
