--- a/people.html
+++ b/people.html
@@ -29,6 +29,7 @@
 
     }
   </script>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
   <style>
       *{font-family:malgun gothic;
         line-height:160%;}
