--- a/index.html
+++ b/index.html
@@ -86,6 +86,17 @@ setTimeout("hidetrail()", displayduration*1000)
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
 	<style>
 	
+@media print {
+        h1 {
+   			font-size: 20pt;
+        }
+
+        h2{font-size:16pt;}
+
+        
+
+    }
+
       *{font-family:malgun gothic;
         line-height:160%;}
       
