--- a/stillcut.html
+++ b/stillcut.html
@@ -78,7 +78,16 @@ document.onmousemove=followmouse
 if (displayduration>0)
 setTimeout("hidetrail()", displayduration*1000)
   </script>
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
+
   <style>
+
+@media print {
+        h1 {
+        font-size: 20pt;
+        }
+    }
+  
       *{font-family:malgun gothic;
         line-height:160%;}
     .allbox {
